--- a/Project.toml
+++ b/Project.toml
@@ -5,14 +5,13 @@ version = "0.3.6"
 [deps]
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-METIS4_jll = "40b5814e-7855-5c9f-99f7-a735ce3fdf8b"
+METIS_jll = "d00139f3-1899-568f-a2f0-47f597d42d70"
 OpenBLAS32_jll = "656ef2d0-ae68-5445-9ca0-591084a874a2"
 SHA = "ea8e919c-243c-51af-8825-aaa63cd721ce"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 libblastrampoline_jll = "8e850b90-86db-534c-a0d3-1478176c7d93"
 
 [compat]
-METIS4_jll = "=400.0.301"
 OpenBLAS32_jll = "0.3.9"
 julia = "^1.6.0"
 
